--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,84 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+#container-blue {
+  background-color: #1c5380;
+  height: 350px;
+}
+
+/* Main content */
+
+#container-white {
+  background-color: #fff;
+  display: flex;
+}
+
+h2 {
+  color: #06365f;
+  font-weight: bold;
+}
+
+.logo {
+  background-color: violet;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.button {
+  background-color: #1c5380;
+  width: 100px;
+  color: white;
+  font-size: medium;
+}
+
+.home-icon {
+  width: 30px;
+  height: 20px;
+}
+
+.content {
+  background-color: turquoise;
+  width: 34%;
+}
+
+p {
+  font-weight: bolder;
+}
+
+.downloads {
+  background-color: red;
+  display: flex;
+}
+
+/* Telephones */
+
+.telephone-container {
+  display: flex;
+  background-color: gray;
+}
+
+/* Footer */
+
+.information {
+  width: 100%;
+  margin-bottom: 40px;
+}
+
+.information > ul {
+  display: flex;
+  justify-content: center;
+}
+
+li {
+  margin-right: 30px;
+  font-weight: bold;
+  font-size: 12px;
+  list-style: none;
+  text-transform: uppercase;
+  color: #1c5380;
+}
+
+.copyright {
+  color: gray;
+}
