--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,92 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.backround-blue {
+  background-color: #1c5380;
+  height: 400px;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.images-padding {
+  padding: 120px;
+}
+
+.phone-img {
+  height: 580px;
+  width: 350px;
+}
+.insta-logo {
+  position: absolute;
+  top: 150px;
+  left: 520px;
+  width: 314px;
+  height: 78px;
+}
+
+.button{
+  background-color: #4682B4;
+  border-radius: 5px;
+  height: 50px;
+  width: 150px;
+  position: absolute;
+  top: 160px;
+  left: 950px;
+  text-align: center;
+  vertical-align: middle;
+  color: white;
+  font-size: 1.4em;
+  font-weight: bold;
+}
+
+.frame-container{
+  background-image: url(../lab-css-instagram-clone/images/frame.png);
+  background-color: white;
+  position: absolute;
+  left: 525px;
+  top: 250px;
+  height: 500px;
+  width: 500px;
+  padding: 20px 50px;
+  border-radius: 10px;
+  box-shadow:   gray;
+}
+
+h1{
+  color: #06365f;
+  font-size: 1.8em;
+}
+
+.text {
+  font-size: 1.2em;
+  padding-bottom: 15px;
+}
+
+.badges-padding {
+  padding: 10px;
+  
+}
+.footer-container{
+  position: absolute;
+  top: 750px;
+  right: 270px;
+  padding: 30px 
+
+}
+
+footer > ul {
+  list-style: none;
+  display: inline-flex;
+}
+
+footer li {
+  color: #1c5380;
+  font-size: 0.8em;
+  font-weight: bold;
+  padding: 0px 10px
+}
+
+.insta-rights {
+  color: gray;
+}
