--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,99 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: linear-gradient(to bottom, #3f729b  0%, #3f729b  37%, #3f729b  37%,white 37%,white 100%);
 }
+
+header {
+  display: flex;
+  justify-content: center;
+  margin-top: 8%;
+  margin-bottom: 2%;
+}
+
+.phones-image {
+  width: 25%;
+}
+
+.box-info {
+  width: 45%;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
+
+.box-info div {
+  margin-left: 10%;
+}
+
+.top-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.top-bar button {
+  background-color: #4883b1;
+  height: 40px;
+  width: 90px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border: none;
+  border-radius: 2px;
+  margin-right: 20px;
+}
+
+.top-bar button a {
+  color: white;
+  text-decoration: none;
+  font-weight: 600;
+}
+
+.text {
+  background-image: url(/starter-code/images/frame.png);
+  background-repeat: no-repeat;
+}
+
+.text h4 {
+  color: #06365f;
+  width: 50%;
+  font-size: 24px;
+  font-weight: 600;
+  padding-left: 40px;
+}
+
+.text p {
+  padding-left: 40px;
+  width: 85%;
+}
+
+.badges {
+  padding-left: 40px;
+}
+
+.badges img {
+  padding-right: 15px;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  margin: 50px 0 30px 0;
+}
+
+footer ul li {
+  display: inline;
+  padding: 0 10px;
+  color: gray;
+  font-size: 14px;
+  font-weight: 600;
+}
+
+footer ul li a {
+  text-decoration: none;
+  color: #1c5380;
+  font-weight: 600;
+  font-size: 14px;
+}
+
