--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,42 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.header {
+  
+}
+
+.fondo {
+  
+}
+.degrad {
+  
+}
+
+.resum {
+  
+}
+
+.title {
+  
+}
+
+.text {
+  
+}
+
+.stores {
+  
+}
+
+.mobiles {
+  
+}
+
+.footer {
+  
+}
+#copyr {
+  
+}
+
