--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,47 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+/*GLOBALS*/
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.container {
+  display: flex;
+  justify-content: space-around;
+  padding: 80px 50px;
+  width: 1200px;
+  margin: 50px;
+  background-image: url(/images/bgtile.png);
+  background-size: 100% 40%;
+}
+
+#phones {
+  margin: 0 50px;
+}
+
+.info {
+  display: flex;
+  flex-direction: column;
+}
+
+.brand {
+display: flex;
+justify-content: space-evenly;
+align-items: center;
+}
+
+button{
+  background-color: #1c5380;
+  width: 100px;
+  height: 40px;
+  border: 0px;
+  color: white;
+  font-size: 14px;
+}
+
+button img {
+}
+
