--- a/styles/style.css
+++ b/styles/style.css
@@ -7,43 +7,86 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
 }
 
-.header {
+header {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  width: 500px;
+
   
 }
 
-.fondo {
+.login {
+  border-color:#06365f ;
+  border-style: groove;
+  background-color: #1c5380;
+  
+
   
 }
 .degrad {
   
 }
 
-.resum {
+.resume {
   
+  border-radius: 7px;
+  display: column;
+  flex-direction: row;
+  padding: 20px 20px 20px 20px;
+  float: right;
+  width: 500px;
+  background-color: white;
+
+
+    
 }
 
 .title {
-  
+  color:#06365f;
+  font-size: 20px;
 }
 
 .text {
+  color: black;
   
 }
 
 .stores {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
   
 }
 
 .mobiles {
-  
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  float: left; 
+  width: 500px;
+  background-color: white;
+
 }
 
-.footer {
-  
+
+ul{
+  color: #1c5380;
+  list-style-type: none;
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content:space-between;
+  padding: 60px 60px 60px 60px;
+  text-decoration: none;
+  clear: both;
 }
+
 #copyr {
+  color: rgb(134, 132, 128);
   
 }
 
