--- a/styles/style.css
+++ b/styles/style.css
@@ -8,9 +8,13 @@ body {
   margin: 0;
 }
 
-header {
+main {
   background-image: url("../images/bgtile.png");
   height: 300px;
+}
+
+.iphone-section {
+  padding-top: 120px;
 }
 
 .iphone {
@@ -18,13 +22,14 @@ header {
   padding-left: 100px;
 }
 
-.content {
+#top-logos {
   display: flex;
-
+  align-items: center;
+  padding-left: 200px;
 }
 
 .home {
-  border: solid 1px;
+  border: solid 1px #1c5380;
   height: 30px;
   color: white;
   font-weight: bolder;
@@ -39,21 +44,32 @@ header {
   background-image: url("../images/frame.png");
   background-repeat: no-repeat;
   display: flex;
+  flex-direction: column;
+  background-position: top;
 }
 
 .text h2 {
   color: #06365f;
   font-weight: 550;
   display: flex;
+  width: 250px;
+  align-self: center;
 }
 
 .text article {
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.text p {
+  padding: 0px 200px;
 }
 
 .logos {
   display: flex;
   list-style-type: none;
+  align-self: center;
 }
 
 .logos ul {
