--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,96 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+#main-container {
+  padding: 70px 0;
+  background-image: url('../images/bgtile.png');
+  background-repeat-x: repeat;
+  background-repeat-y: no-repeat;
+}
+
+.container {
+  width: 900px;
+  display: flex;
+  justify-content: space-between;
+  margin: auto;
+}
+
+.right-column {
+  width: 60%;
+}
+
+.logo {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px;
+  padding-bottom: 20px;
+}
+
+.white-box {
+  background-image: url('../images/frame.png');
+  background-repeat: no-repeat;
+  background-size: 100%;
+  padding: 40px;
+  border-radius: 5px;
+}
+
+.white-box h2 {
+  color: #06365f;
+  margin: 0;
+  line-height: 1.3em;
+  padding-bottom: 10px;
+  font-size: 26px
+}
+
+.white-box p {
+  font-size: 17px;
+}
+
+.login-button {
+  color: white;
+  font-weight: 600;
+  font-size: 13px;
+  text-decoration: none;
+  background: linear-gradient(#78afdd, #1c5380);
+  border: 2px solid #325877;
+  padding: 5px 10px;
+  border-radius: 5px;
+}
+
+.button-image {
+  vertical-align: middle;
+  padding-right: 5px;
+}
+
+.download-button {
+  margin-top: 40px;
+}
+
+.download-button img {
+  padding-right: 20px;
+}
+
+.footer ul {
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+  width: 600px;
+  margin: auto;
+  padding-bottom: 30px;
+}
+
+.footer ul li {
+  text-transform: uppercase;
+  font-size: 11px;
+  font-weight: 600;
+  color: #1c5380;
+}
+
+.footer .copyright {
+  color: lightgrey;
+}
+
