--- a/styles/style.css
+++ b/styles/style.css
@@ -4,11 +4,12 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
-
 html {
   box-sizing: border-box;
 }
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
   margin: 0;
 }
@@ -23,15 +24,17 @@ body {
 }
 /* ---------------------------------- TOOLS --------------------------------- */
 
-
 /* ------------------------------ MAIN/SECTION ------------------------------ */
 
 main {
-  background: rgb(58,104,144);
-  background: linear-gradient(180deg, rgba(58,104,144,1) 0%, rgba(31,57,79,1) 100%);
+  background: rgb(58, 104, 144);
+  background: linear-gradient(
+    180deg,
+    rgba(58, 104, 144, 1) 0%,
+    rgba(31, 57, 79, 1) 100%
+  );
   background-size: 100% 39%;
   background-repeat: no-repeat;
-  
 }
 /* Section */
 #content {
@@ -49,7 +52,7 @@ main {
   justify-content: space-between;
 }
 #login-button a {
-  text-decoration:none;
+  text-decoration: none;
 }
 button {
   display: flex;
@@ -58,7 +61,11 @@ button {
   border-radius: 5px;
   border-color: rgb(55, 97, 134);
   background: rgb(53, 100, 138);
-  background:  linear-gradient(180deg, rgba(58,104,144,1) 0%, rgba(31,57,79,0.8) 100%);
+  background: linear-gradient(
+    180deg,
+    rgba(58, 104, 144, 1) 0%,
+    rgba(31, 57, 79, 0.8) 100%
+  );
   color: white;
   font-weight: 700;
   padding-right: 1em;
@@ -100,7 +107,7 @@ button {
 /* ------------------------------ MAIN/SECTION ------------------------------ */
 
 /* --------------------------------- FOOTER --------------------------------- */
-footer ul{
+footer ul {
   display: flex;
   justify-content: space-around;
   list-style: none;
