--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,102 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.vspacing20{
+  height: 20px;
+}
+
+.vspacing60{
+  height: 60px;
+}
+
+.principal{
+  background-image: url(../images/bgtile.png);
+  background-size: 100% 350px;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: row;
+}
+
+.phones{
+  margin: 135px;
+}
+
+.logo{
+  margin-top: 135px;
+}
+
+.logo button{
+  float: right;
+  margin-right: 80px;
+  border-radius:4px;
+  font-size: 16px;
+  font-weight: 700;
+  color: #CED0D3;
+  text-align: center;
+  padding: 10px 30px;
+  border: 1px solid #1c5380;
+  background: rgb(6,54,95);
+  background: linear-gradient(0deg, rgba(6,54,95,1) 0%, rgba(28,83,128,0.8757878151260504) 40%);
+}
+
+button img{
+  display: inline;
+}
+
+button p{
+  display: inline;
+}
+
+.instagram{
+  margin-left: 10px;
+}
+
+.card{
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 80%;
+  padding: 45px;
+}
+
+.card h1{
+  color: #1c5380;
+  width: 50%
+}
+
+.card p{
+  font-size: 21px;
+  line-height: 1.6;
+}
+
+.botones{ 
+  margin: 40px 0px;
+}
+
+.card img{
+  margin-right: 40px;
+}
+
+footer{
+  text-align: center;
+}
+footer ul{
+  list-style: none;
+}
+
+footer li{
+  display: inline;
+  padding: 8px 10px;
+  font-weight: 800;
+}
+
+.azul{
+  color: #5A8BB4 ;
+}
+
+.gris{
+  color:#CED0D3;
+  margin-left: 25px;
+
+}
