--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,47 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+  padding: 70px;
 }
+.flex-row-space-bt{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.main-flow{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.main-content{
+  margin: 50px;
+  float: left;
+  vertical-align: top;
+}
+
+.flex-colum-start{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+.flex-row-center{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.appButton{
+  width: 250px;
+  margin: 10px;
+}
+.footer{
+  text-transform: uppercase;
+  color: #3a678f;
+  font-weight: bold;
+  font-size: -3em;
+}
+.footer ul{
+  list-style: none;
+}
+
