--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,105 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.main-flex {
+  width: 100%;
+  height: 500px;
+  background-image: url('/images/bgtile.png');
+  background-size: 100% 40%;
+  background-repeat: no-repeat;
+  background-color: white;
+  display: flex;
+  flex-direction: row;
+  padding: 10%;
+}
+
+.login {
+  margin: 0 5%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.login > img {
+  width: 80%;
+  padding: 0 20px;
+}
+
+.button-login {
+  background-image: linear-gradient(to top, #6F91AF, #497499); 
+  padding: 8px 14px;
+  color: white;
+  box-shadow: 4px 4px 4px #386286;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.button-login div {
+  margin-right: 10px;
+  margin-left: 0;
+}
+
+.button-login img {
+  width: 100%;
+  padding-top: 4px;
+}
+
+.button-login a {
+  text-align: right;
+  text-decoration: none;
+  color: white;
+}
+
+.insta-intro {
+  margin: 0 4%;
+  background-image: url('/images/frame.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.insta-intro h1 {
+  padding: 5% 0 0 5%;
+  color: #06365f;
+}
+
+.insta-intro p {
+  font-family: 'Helvetica';
+  padding: 0 20% 0 5%;
+}
+
+.store-links {
+  padding: 3% 0 0 5%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
+.store-links div {
+  margin: 0 2% 0 0;
+}
+
+.footer-elements {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-nav {
+  font-size: 0.6em;
+  font-weight: bold;
+  list-style: none;
+  color: #06365f;
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.footer-elements p {
+  font-size: 0.7em;
+}
+
