--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,81 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.bg-ing{
+    position:relative;
+    background-image: url(../images/bgtile.png);
+    background-position: 0 0;
+    background-repeat: repeat;
+    background-size: cover;
+    height: 120px;
+    padding:70px 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .informacion{
+    width: 30%;
+    margin-left: 2%;
+  }
+
+  .logoYboton{
+    display: flex;
+    flex-direction: row;
+    justify-content:space-between;
+    align-items: center;
+  }
+
+  .fondoBlanco{
+    position:relative;
+    background-image: url(../images/frame.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    height: 300px;
+    padding:20px 50px;
+  }
+
+  .fondoBlanco h1{
+    color: #06365f;
+    font-size: 150%;
+    line-height : 25px;
+  }
+
+  .boton{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 10px;
+    margin-right: 10px;
+    border-radius: 3px;
+    background: linear-gradient(#1c5380, #06365f);
+    box-shadow: 3px;
+    height: 40px;
+    width: 100px;
+  }
+
+.boton a{
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+}
+
+.apps-logos{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+#separacion{
+  margin-left: 15px;
+}
+
+.listaFinal ul{
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  margin-left: 5px;
+}
+
