--- a/styles/style.css
+++ b/styles/style.css
@@ -1,50 +1,93 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
-
-/*GLOBALS*/
-
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 .container {
   display: flex;
-  justify-content: space-around;
-  padding: 80px 50px;
-  width: 1200px;
-  margin: 50px;
   background-image: url(/images/bgtile.png);
+  background-repeat: no-repeat;
   background-size: 100% 40%;
-}
-
-#phones {
-  margin: 0 50px;
+  padding: 80px 80px 20px 80px;
+  justify-content: space-evenly;
 }
 
 .info {
   display: flex;
   flex-direction: column;
+  width: 50%;
 }
 
 .brand {
-display: flex;
-justify-content: space-evenly;
-align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 10px;
 }
 
-button{
-  background-color: #1c5380;
-  width: 100px;
-  height: 40px;
-  border: 0px;
+button {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background: rgb(249,247,247);
+  background: linear-gradient(0deg, rgba(249,247,247,0.29175420168067223) 0%, rgba(28,83,128,1) 93%);
+  width: 120px;
+  height: 50px;
+  border: 1px solid #1c5380;
   color: white;
-  font-size: 14px;
+  font-size: 16px;
 }
 
-button img {
+.text {
+  display: flex;
+  flex-direction: column;
+  background-image: url(/images/frame.png);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  padding: 0 20px;
 }
+
+.text h2 {
+  color: #06365f;
+  font-size: 30px;
+  font-weight: 700;
+}
+
+span {
+  font-weight: bold;
+}
+
+.text p {
+  font-size: 18px;
+  margin: 10px;
+}
+
+.buttons {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.links {
+  display: flex;
+  justify-content: space-around;
+  margin-right: 20px;
+}
+
+.links a {
+  
+  text-decoration: none;
+  font-weight: 400;
+  color: #1c5380;
+  padding-right: 20px;
+}
+
+
 
