--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,92 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
-
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
   background-image: url(../images/bgtile.png);
   background-repeat:repeat-x;
+}
+
+#insta-main{
+  width:85%;
+  display:flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin:7.5%;
+}
+
+#text-content{
+  width:50%;
+}
+
+#logo-login{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.button{
+  margin:0;
+  padding:0 1% 0 1%;
+  display:flex;
+  align-items: center;
+  border:none;
+  border-radius: 4px;
+  background: rgb(6,54,95);
+  background: linear-gradient(0deg, rgba(6,54,95,1) 0%, rgba(28,83,128,1) 0%, rgba(85,145,195,1) 74%);  color:white;
+  font-weight: 700;
+  box-shadow: 0 0 2px 1px #06365f;
+}
+
+#log-in{
+  height:50%;
+}
+
+#log-in img{
+  margin-right:4px;
+}
+
+#logo-login button{
+  width:20%;
+  display:flex;
+  justify-content: center;
+}
+
+.information{
+  margin-top:1%;
+  padding: 2% 5%;
+  background-image: url(../images/frame.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.information h1{
+  color: #06365f;
+  text-shadow: 2px 2px 4px #ccc;
+  font-size: 1.5em;
+}
+
+.badges img{
+  margin-top: 4%;
+  margin-left: 3%;
+}
+
+.important-links{
+  width:60%;
+  margin-left:18%;
+  display:flex;
+  flex-direction:row;
+  justify-content: space-between;
+  list-style: none;
+}
+
+.important-links a{
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 0.75em;
+  font-weight: 700;
+  color: #1c5380;
+}
+
+.copyright a{
+  color: lightgrey;
 }
