--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
@@ -18,6 +19,7 @@ body {
 }
 
 #logo-login{
+  padding:0 1.5% 0 0.75%;
   display: flex;
   flex-direction: row;
   align-items: center;
