--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,30 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  margin: 0px;
+  padding: 0px;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+main {
+  margin: 50px;
+  display: flex;
+}
+
+footer {
+  margin: 50px;
+  display: flex;
+}
+
+figure, section {
+  margin: 25px;
+}
+
+header {
+  
 }
